[package]
name = "actix-xsrf"
version = "0.1.0"
authors = ["Naitik Shah <n@daaku.org>"]
edition = "2018"
description = "Middleware to provide XSRF protection."
readme = "readme.md"
repository = "https://github.com/daaku/actix-xsrf"
keywords = ["actix", "middleware", "xsrf", "csrf", "cross-site"]
categories = []
license = "MIT"

[dependencies]
actix-web = { version = "3.0.0-alpha.3", default-features = false }
futures-util = "0.3.5"
xsrf = { path = "../xsrf" } # "0.1.0"

[dev-dependencies]
actix-rt = "1.1.1"
